Adding the ability to fire

--- a/PlayervsAI/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PlayervsAI/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -269,7 +269,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-PlayervsAI.TimeStamp=2022.04.04-22.43.47
+PlayervsAI.TimeStamp=2022.04.13-13.40.01
 PlayervsAI.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.09.29-09.29.08
 PakFile.LastCompileMethod=Unknown
@@ -1101,7 +1101,7 @@ MovieSceneCapture.TimeStamp=2021.09.29-09.29.07
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
