--- a/PlayervsAI/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PlayervsAI/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -240,7 +240,7 @@ SkeletalMeshComponent=
 Assault_Rifle_With_Recoil=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,PlayerClass.PostProcess.Lens,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/PlayerClassBlueprints
+ContentBrowserTab1.SelectedPaths=/Classes_Game/PlayervsAI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1101,7 +1101,7 @@ MovieSceneCapture.TimeStamp=2021.09.29-09.29.07
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1851,7 +1851,7 @@ GunProperties="\"Object.Config.WeaponConfig\" "
 [RootWindow]
 ScreenPosition=X=640.000 Y=340.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
