--- a/PlayervsAI/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PlayervsAI/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -231,7 +231,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveLeft,InputSettings.Bindings.AxisMappings.MoveBackwards,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveLeft,InputSettings.Bindings.AxisMappings.MoveBackwards,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveLeft,InputSettings.Bindings.AxisMappings.MoveBackwards,
-BP_PlayerClass_C=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,PlayerClass.PostProcess.Lens,BP_PlayerClass_C.Physics.ConstraintsGroup,BP_PlayerClass_C.Collision.Collision,BP_PlayerClass_C.Rendering.TextureStreaming,BP_PlayerClass_C.Rendering.LOD,BP_PlayerClass_C.PostProcess.Color Grading,BP_PlayerClass_C.PostProcess.Color Grading|Misc,BP_PlayerClass_C.PostProcess.Rendering Features|Ambient OcclusionAdvanced,BP_PlayerClass_C.PostProcess.Rendering Features|Ambient Occlusion,BP_PlayerClass_C.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,BP_PlayerClass_C.PostProcess.Rendering Features|Light Propagation Volume,BP_PlayerClass_C.PostProcess.Rendering Features|Screen Space Reflections,BP_PlayerClass_C.PostProcess.Rendering Features|PathTracing,BP_PlayerClass_C.PostProcess.Rendering Features,
+BP_PlayerClass_C=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,PlayerClass.PostProcess.Lens,BP_PlayerClass_C.Physics.ConstraintsGroup,BP_PlayerClass_C.Collision.Collision,BP_PlayerClass_C.Rendering.TextureStreaming,BP_PlayerClass_C.Rendering.LOD,BP_PlayerClass_C.PostProcess.Color Grading,BP_PlayerClass_C.PostProcess.Color Grading
 HOTRELOADED_PlayerClass_0=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,
 HOTRELOADED_PlayerClass_1=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,
 SceneComponent=
@@ -239,6 +239,7 @@ HOTRELOADED_PlayerClass_2=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rende
 SkeletalMeshComponent=SkeletalMeshComponent.Rendering.LOD,
 Assault_Rifle_With_Recoil=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,PlayerClass.PostProcess.Lens,
 BP_Sky_Sphere_C=PlayerClass.Physics.ConstraintsGroup,PlayerClass.Rendering.TextureStreaming,PlayerClass.Rendering.LOD,PlayerClass.PostProcess.Lens,BP_PlayerClass_C.Physics.ConstraintsGroup,BP_PlayerClass_C.Collision.Collision,BP_PlayerClass_C.Rendering.TextureStreaming,BP_PlayerClass_C.Rendering.LOD,BP_PlayerClass_C.PostProcess.Color Grading,
+AR_C=SkeletalMeshComponent.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/PlayerClassBlueprints
@@ -270,8 +271,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-PlayervsAI.TimeStamp=2022.04.13-16.48.26
-PlayervsAI.LastCompileMethod=Runtime
+PlayervsAI.TimeStamp=2022.04.14-12.06.00
+PlayervsAI.LastCompileMethod=External
 PakFile.TimeStamp=2021.09.29-09.29.08
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.09.29-09.29.13
@@ -1102,7 +1103,7 @@ MovieSceneCapture.TimeStamp=2021.09.29-09.29.07
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/PlayerClassBlueprints/AR.AR
 
 [DetailCategories]
